--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,6 +1,6 @@
 
     <div class='row'>
       <div class="col s12">
-        <h3>Find meetups near you!</h3>
+        <h3 id="test">Find meetups near you!</h3>
       </div>
     </div>
