--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -7,7 +7,7 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/css/materialize.min.css"/>
     <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <!-- <link rel='stylesheet' href='../public/stylesheets/style.css'/> -->
+    <link rel='stylesheet' href='../public/stylesheets/style.css'/>
   </head>
 
   <body>
