--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -11,35 +11,40 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/js/materialize.min.js"></script>
 
     <link href="//fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel='stylesheet' href='../public/stylesheets/style.css'/>
-
-
-
+    <!-- <link rel='stylesheet' href='../style.css'/> -->
+    <link rel="stylesheet" href="/stylesheets/style.css">
   </head>
 
   <body>
+    <div class="navbar-fixed">
       <nav class="blue-grey darken-2">
         <div class="nav-wrapper">
-          <a href="#!" class="brand-logo">Logo</a>
+          <a href="#!" class="brand-logo">Potterverse API</a>
           <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
           <ul class="right hide-on-med-and-down">
-            <li><a href="sass.html">Sass</a></li>
+            <li><a href="http://www.google.com">Google</a></li>
             <li><a href="badges.html">Components</a></li>
             <li><a href="collapsible.html">Javascript</a></li>
             <li><a href="mobile.html">Mobile</a></li>
           </ul>
           <ul class="side-nav" id="mobile-demo">
-            <li><a href="sass.html">Sass</a></li>
+            <li><a href="http://www.google.com">Google</a></li>
             <li><a href="badges.html">Components</a></li>
             <li><a href="collapsible.html">Javascript</a></li>
             <li><a href="mobile.html">Mobile</a></li>
           </ul>
         </div>
       </nav>
+    </div>
     <div class="container-fluid" style='width:100%'>
       {{{body}}}
     </div>
 
-
+    <script src="http://code.jquery.com/jquery-latest.min.js"></script>
+    <!-- Compiled and minified JavaScript -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/js/materialize.min.js"></script>
+    <script>
+     $(".button-collapse").sideNav();
+    </script>
   </body>
 </html>
