--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,5 +1,5 @@
     <div class='row'>
       <div class="col s12">
-        <h3 id="test">Potter Everything!!</h3>
+        <h3 id="test">Welcome to the Potterverse</h3>
       </div>
     </div>
