--- a/views/characters/index.hbs
+++ b/views/characters/index.hbs
@@ -1,5 +1,6 @@
 <div class='row'>
   <div class="col s12">
     <h3 id="test">Characters Index Page</h3>
+    {{#each characters}}{{c_first}}{{/each}}
   </div>
 </div>
