working and displaying basic character data

--- a/views/characters/index.hbs
+++ b/views/characters/index.hbs
@@ -1,6 +1,8 @@
 <div class='row'>
   <div class="col s12">
     <h3 id="test">Characters Index Page</h3>
-    {{#each characters}}{{c_first}}{{/each}}
+    {{#each characters}}
+    <p>{{c_first}} {{c_last}}</p>
+    {{/each}}
   </div>
 </div>
