--- a/views/characters/index.hbs
+++ b/views/characters/index.hbs
@@ -1,8 +1,11 @@
 <div class='row'>
   <div class="col s12">
-    <h3 id="test">Characters Index Page</h3>
+    <h4 id="test">Characters Basic Information</h3>
+    <p>This information can be called from: '/characters/menu'</p>
+    <hr>
     {{#each characters}}
     <p>{{c_first}} {{c_last}}</p>
     {{/each}}
   </div>
+  <!-- <img src="http://goo.gl/sSzrWz"></> -->
 </div>
