--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -22,16 +22,12 @@
           <a href="#!" class="brand-logo">Potterverse API</a>
           <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
           <ul class="right hide-on-med-and-down">
-            <li><a href="/">home</a></li>
+            <li><a href="/">Home</a></li>
             <li><a href="/characters">Characters</a></li>
-            <li><a href="collapsible.html">Javascript</a></li>
-            <li><a href="mobile.html">Mobile</a></li>
           </ul>
           <ul class="side-nav" id="mobile-demo">
             <li><a href="/">Home</a></li>
             <li><a href="/characters">Characters</a></li>
-            <li><a href="collapsible.html">Javascript</a></li>
-            <li><a href="mobile.html">Mobile</a></li>
           </ul>
         </div>
       </nav>
