working, starting on merging data for tables

--- a/views/characters/index.hbs
+++ b/views/characters/index.hbs
@@ -7,5 +7,10 @@
     <p>{{c_first}} {{c_last}}</p>
     {{/each}}
   </div>
+  <div>
+    {{#each hogwarts_houses}}
+      {{house_name}}
+    {{/each}}
+  </div>
   <!-- <img src="http://goo.gl/sSzrWz"></> -->
 </div>
