--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,4 +1,4 @@
-    <div class='row'>
+    <div class='container row'>
       <div class="col s12">
         <h3 id="test">Welcome to the Potterverse</h3>
       </div>
