--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -24,11 +24,13 @@
           <ul class="right hide-on-med-and-down">
             <li><a href="/">Home</a></li>
             <li><a href="/characters">Characters</a></li>
+            <li><a href="/data">Data</a></li>
             <li><a href="/characters/new">Add New Character</a></li>
           </ul>
           <ul class="side-nav" id="mobile-demo">
             <li><a href="/">Home</a></li>
             <li><a href="/characters">Characters</a></li>
+            <li><a href="/data">Data</a></li>
             <li><a href="/characters/new">Add New Character</a></li>
           </ul>
         </div>
