form working to post new character

--- a/views/characters/index.hbs
+++ b/views/characters/index.hbs
@@ -7,6 +7,8 @@
         <tr>
           <th>Name</th>
           <th>House</th>
+          <th>Description</th>
+          <th></th>
         </tr>
       </thead>
       <tbody>
@@ -14,6 +16,8 @@
         <tr>
           <td> {{c_first}} {{c_last}} </td>
           <td> {{c_house}} </td>
+          <td> {{c_desc}} </td>
+          <td> <i class="tiny material-icons">mode_edit</i> </td>
         </tr>
         {{/each}}
       </tbody>
