--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -46,5 +46,8 @@
     <script>
      $(".button-collapse").sideNav();
     </script>
+    <script>
+      $('select').material_select();
+    </script>
   </body>
 </html>
