--- a/views/characters/update.hbs
+++ b/views/characters/update.hbs
@@ -2,19 +2,19 @@
   <h4>Update Character Details</h4>
   <div class="row">
     {{#each character}}
-    <form class="col s12" action='/characters/' + character.id + '/update?_method=put' method="post">
-  <div class="row">
-    <div class="col s12">
+    <form class="col s12" action='/characters/{{c_id}}/update?_method=put' method="post">
       <div class="row">
-        <div class="input-field col s6">
-          <input name="c_first" type="text" class="validate" value='{{c_first}}'>
-          <label>First Name</label>
+        <div class="col s12">
+          <div class="row">
+            <div class="input-field col s6">
+              <input name="c_first" type="text" class="validate" value='{{c_first}}'>
+              <label>First Name</label>
+            </div>
+          </div>
         </div>
       </div>
-    </div>
+      <button type="submit">Submit</button>
+    </form>
+    {{/each}}
   </div>
-  <button type="submit">Submit</button>
-</form>
-{{/each}}
-</div>
 </div>
