--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -10,7 +10,7 @@
     <!-- Compiled and minified JavaScript -->
     <script src="//cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/js/materialize.min.js"></script>
 
-    <link href="//fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="//fonts.googleapis.com/icon?family=Material+Icons">
     <!-- <link rel='stylesheet' href='../style.css'/> -->
     <link rel="stylesheet" href="/stylesheets/style.css">
   </head>
