--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -13,6 +13,10 @@
     <link rel="stylesheet" href="//fonts.googleapis.com/icon?family=Material+Icons">
     <!-- <link rel='stylesheet' href='../style.css'/> -->
     <link rel="stylesheet" href="/stylesheets/style.css">
+
+    <script src="//cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.5/handlebars.min.js"></script>
+    <script type="text/javascript" href="../js/handlebars"></script>
+
   </head>
 
   <body>
@@ -49,5 +53,7 @@
     <script>
       $('select').material_select();
     </script>
+
+
   </body>
 </html>
