--- a/views/characters/update.hbs
+++ b/views/characters/update.hbs
@@ -7,8 +7,52 @@
         <div class="col s12">
           <div class="row">
             <div class="input-field col s6">
-              <input name="c_first" type="text" class="validate" value='{{c_first}}'>
+              <input name="c_first" type="text" value='{{c_first}}'>
               <label>First Name</label>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col s12">
+          <div class="row">
+            <div class="input-field col s6">
+              <input name="c_last" type="text" value='{{c_last}}'>
+              <label>Last Name</label>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- <div class="row">
+        <div class="col s12">
+          <div class="row">
+            <div class="input-field col s6">
+              <input type="text" value='{{c_house}}'>
+              <label>House</label>
+            </div>
+          </div>
+        </div>
+      </div> -->
+      <div class="row">
+        <div class="input-field col s12">
+          <select name="c_house" type="select" value='{{c_house}}'>
+            <option value="">Select House</option>
+            <option value="Gryffindor">Gryffindor</option>
+            <option value="Hufflepuff">Hufflepuff</option>
+            <option value="Ravenclaw">Ravenclaw</option>
+            <option value="Slytherin">Slytherin</option>
+            <option value="Unknown">Unknown</option>
+            <option value="Did Not Attend Hogwarts">Did Not Attend Hogwarts</option>
+          </select>
+          <label>Hogwarts House</label>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col s12">
+          <div class="row">
+            <div class="input-field col s6">
+              <input name="c_desc" type="text" value='{{c_desc}}'>
+              <label>Description</label>
             </div>
           </div>
         </div>
@@ -18,3 +62,6 @@
     {{/each}}
   </div>
 </div>
+<script type="text/javascript">
+
+</script>
