working on handlebars

--- a/views/characters/index.hbs
+++ b/views/characters/index.hbs
@@ -24,7 +24,9 @@
           </td>
           <td>
             <form action="/characters/{{c_id}}?_method=delete" method="post">
-              <button type="submit" value="delete">delete</button>
+              <a class="btn" type="submit" value="delete">
+                <i class="tiny material-icons">delete</i>
+              </a>
             </form>
           </td>
         </tr>
