--- a/views/characters/update.hbs
+++ b/views/characters/update.hbs
@@ -36,10 +36,10 @@
       <div class="row">
         <div class="input-field col s12">
           <select name="c_house" type="select" value='{{c_house}}'>
-            <option value="">Select House</option>
+            <option value="" >Select House</option>
             <option value="Gryffindor">Gryffindor</option>
-            <option value="Hufflepuff">Hufflepuff</option>
-            <option value="Ravenclaw">Ravenclaw</option>
+            <option value="Hufflepuff" selected="{{c_house}} === 'Hufflepuff'">Hufflepuff</option>
+            <option value="Ravenclaw" selected="{{c_house}} === 'Ravenclaw'">Ravenclaw</option>
             <option value="Slytherin">Slytherin</option>
             <option value="Unknown">Unknown</option>
             <option value="Did Not Attend Hogwarts">Did Not Attend Hogwarts</option>
