--- a/views/index.hbs
+++ b/views/index.hbs
@@ -2,4 +2,15 @@
       <div class="col s12">
         <h3 id="test">Welcome to the Potterverse</h3>
       </div>
+
+      <div class="container">
+        <p>
+          To get JSON data specify an endpoint i.e. "https://potterverse.herokuapp.com/data/characters"
+        </p>
+        <p>Available Endpoints:
+          <ul>
+            <li>Characters</li>
+          </ul>
+        </p>
+      </div>
     </div>
