--- a/views/index.hbs
+++ b/views/index.hbs
@@ -2,4 +2,9 @@
       <div class="col s12">
         <h3 id="test">Welcome to the Potterverse</h3>
       </div>
+      <div class="container">
+        <p>
+          To get JSON data specify an endpoint i.e. "https://potterverse.herokuapp.com/data/characters"
+        </p>
+      </div>
     </div>
