added better documentation to index page and README

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -6,5 +6,20 @@
         <p>
           To get JSON data specify an endpoint i.e. "https://potterverse.herokuapp.com/data/characters"
         </p>
+        <p>
+          Available Endpoints:
+          <ul>
+            <li>/data/characters_detailed</li>
+            <li>/data/characters_detailed/:id</li>
+            <li>/data/characters_basic</li>
+            <li>/data/characters_basic/:id</li>
+            <li>/data/hogwarts_houses</li>
+            <li>/data/hogwarts_houses/:id</li>
+            <li>/data/hogwarts_staff</li>
+            <li>/data/hogwarts_staff/:id</li>
+            <li>/data/wizarding_schools/</li>
+            <li>/data/wizarding_schools/:id</li>
+          </ul>
+        </p>
       </div>
     </div>
