materialize css updates

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -4,3 +4,12 @@ nav .brand-logo {
 .material-icons {
   padding: 0 5px;
 }
+body {
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
+}
+
+main {
+  flex: 1 0 auto;
+}
