--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,13 +1,13 @@
     <div class='container row'>
-      <div class="col s12">
-        <h3 id="test">Welcome to the Potterverse</h3>
-      </div>
       <div class="container">
+        <p>
+          This is a basic API for Harry Potter related information. Built with Node, Express, and Postgres - also using knex.js for routing and handlebars and materialize css for the basic front-end. Written in and linted for ES6.
+        </p>
         <p>
           To get JSON data specify an endpoint i.e. "https://potterverse.herokuapp.com/data/characters"
         </p>
         <p>
-          Available Endpoints:
+        <strong>Available Endpoints:</strong>
           <ul>
             <li>/data/characters_detailed</li>
             <li>/data/characters_detailed/:id</li>
