css updates, added email button

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -21,5 +21,12 @@
             <li>/data/wizarding_schools/:id</li>
           </ul>
         </p>
+        <p>
+          <strong>Have a character to add? Or a suggestion for another group?</strong>
+          <p>
+            <a class="waves-effect waves-light btn grey darken-2">email us!</a>
+          </p>
+
+        </p>
       </div>
     </div>
