--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -13,7 +13,7 @@
 
 <body>
   <div class="navbar-fixed">
-    <nav class="blue-grey darken-2">
+    <nav class="green darken-4">
       <div class="nav-wrapper">
         <a href="#!" class="brand-logo">Welcome to the Potterverse API</a>
       </div>
@@ -23,10 +23,10 @@
     {{{body}}}
   </div>
 
-  <footer class="page-footer blue-grey darken-2">
+  <footer class="page-footer green darken-4">
     <div class="footer-copyright">
       <div class="container">
-        © 2016 Thacher
+        © 2016 Slytherin
       </div>
     </div>
   </footer>
