added slytherin email

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -24,7 +24,7 @@
         <p>
           <strong>Have a character to add? Or a suggestion for another group?</strong>
           <p>
-            <a class="waves-effect waves-light btn grey darken-2">email us!</a>
+            <a class="waves-effect waves-light btn grey darken-2" onClick="parent.location='mailto:slytherin@deardiabetesyousuck.com'">email us!</a>
           </p>
 
         </p>
