--- a/views/index.hbs
+++ b/views/index.hbs
@@ -4,7 +4,7 @@
           This is a basic API for Harry Potter related information. Built with Node, Express, and Postgres - also using knex.js for routing and handlebars and materialize css for the basic front-end. Written in and linted for ES6.
         </p>
         <p>
-          To get JSON data specify an endpoint i.e. "https://potterverse.herokuapp.com/data/characters"
+          To get JSON data specify an endpoint i.e. "https://potterverse.herokuapp.com/data/characters_basic"
         </p>
         <p>
         <strong>Available Endpoints:</strong>
